kustomize/Mesh/overlays/frontend/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: httpbin
spec:
  gateways:
  - frontend-gateway
  hosts:
  - 'fe.localhost'
  http:
  - match:
    - uri:
        prefix: /httpbin
    rewrite:
      uri: "/"
    route:
    - destination:
        host: frontend
        port:
          number: 8080
